--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,8 @@
     "plugin:@typescript-eslint/recommended",
     "next",
     "next/core-web-vitals",
-    "prettier"
+    "prettier",
+    "plugin:prettier/recommended"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -17,8 +18,111 @@
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "plugins": ["@typescript-eslint"],
+  // "parserOptions": {
+  //   "ecmaVersion": 2020,
+  //   "project": ["./tsconfig.json"],
+  //   "sourceType": "module"
+  // },
+  "plugins": ["import", "@typescript-eslint", "simple-import-sort"],
   "rules": {
-    "@typescript-eslint/no-explicit-any": "error"
-  }
+    "@typescript-eslint/no-explicit-any": "error",
+    // "no-restricted-imports": [
+    //   "error",
+    //   {
+    //     "patterns": ["@material-ui/*/*/*", "!@material-ui/core/test-utils/*"]
+    //   }
+    // ],
+
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ],
+
+    "import/order": [
+      "error",
+      {
+        "groups": [
+          "builtin",
+          "external",
+          "internal",
+          "parent",
+          "sibling",
+          "index",
+          "object"
+        ],
+        "pathGroups": [
+          {
+            "pattern": "react",
+            "group": "external",
+            "position": "before"
+          },
+
+          {
+            "pattern": "**/next/**",
+            "group": "external",
+            "position": "before"
+          },
+
+          {
+            "pattern": "**/@mui/**",
+            "group": "internal",
+            "position": "before"
+          },
+
+          {
+            "pattern": "**/@views/**",
+            "group": "internal",
+            "position": "before"
+          },
+
+          {
+            "pattern": "**/@components/**",
+            "group": "internal",
+            "position": "before"
+          },
+
+          {
+            "pattern": "**/@hooks/**",
+            "group": "internal",
+            "position": "before"
+          },
+
+          {
+            "pattern": "**/@provider/**",
+            "group": "internal",
+            "position": "before"
+          },
+
+          {
+            "pattern": "**/@utils/**",
+            "group": "internal",
+            "position": "before"
+          },
+
+          {
+            "pattern": "**/@shared/**",
+            "group": "internal",
+            "position": "before"
+          }
+        ],
+        "pathGroupsExcludedImportTypes": ["react"],
+        "newlines-between": "always",
+        "alphabetize": {
+          "order": "asc",
+          "caseInsensitive": true
+        }
+      }
+    ]
+  },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "paths": ["src", "dist"],
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+      }
+    }
+  },
+  "ignorePatterns": [".eslintrc.json"]
 }
